# davidson_diagonalization

./: CMakeLists.txt  README.md
cmake/: CompileOptions.cmake
src/: CMakeLists.txt  davidson.cpp  davidson.hpp
tests/: CMakeLists.txt  asserts.hpp  davidson.hpp  main.cpp  qr.hpp
